--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-Django~=2.2.4
-django-bootstrap4==2.2.0
 beautifulsoup4==4.9.1
 cachetools==4.1.1
 certifi==2020.6.20
 chardet==3.0.4
+Django==2.2.14
+django-bootstrap4==2.2.0
+django-widget-tweaks==1.4.8
 google-auth==1.18.0
 google-auth-oauthlib==0.4.1
 gspread==3.6.0
@@ -22,4 +23,5 @@ requests-oauthlib==1.3.0
 rsa==4.6
 six==1.15.0
 soupsieve==2.0.1
+sqlparse==0.3.1
 urllib3==1.25.9
